# PDF-parsers

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
notebooks/: docling.ipynb  llama-parse.ipynb  llamaindex.ipynb  unstructured-io.ipynb
notebooks/scratch/: markdown.md
parseval/: core.py  crawl.py  evaluate.py  parse.py  schemas.py
parseval/crawlers/: bs_crawler.py  html_crawler.py  pdf_crawler.py  pyppeteer_crawler.py
parseval/evaluation/: chunk_matching.py
parseval/evaluation/methods/: emb_similarity.py  lcs.py  rouge.py
parseval/parsers/: docling_parser.py  gemini_parser.py  llama_parser.py  newsplease_parser.py  pymupdf_parser.py  readability_parser.py  schema.py
