[tool.poetry]
name = "parseval"
version = "0.1.0"
description = ""
authors = ["Imene KOLLI <53266529+imene-swaan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
python-dotenv = "^1.0.1"
toml = "^0.10.2"


# Crawler-specific dependencies
bleach = "^6.2.0"
[tool.poetry.group.crawler]
optional = false

[tool.poetry.group.crawler.dependencies]
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pyppeteer = "^2.0.0"


# Parser-specific dependencies
[tool.poetry.group.parser]
optional = false

[tool.poetry.group.parser.dependencies]
pymupdf = "^1.24.13"
docling = "^2.5.2"
llama-parse = "^0.5.14"
html2markdown = "^0.1.7"
markdownify = "^0.13.1"
html2text = "^2024.2.26"
news-please = "^1.6.13"
readability-lxml = "^0.8.1"


[tool.poetry.group.evaluation]
optional = false

[tool.poetry.group.evaluation.dependencies]
sentence-transformers = "^3.2.0"
srsly = "^2.4.8"
rouge = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
